apps/argocd/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eck
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
---
apiVersion: v1
kind: Namespace
metadata:
  name: trivy-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
